# external-secrets-reloader

./: .gitignore  Dockerfile  README.md  index.yaml  pyproject.toml
.github/workflows/: build-and-publish-release.yml  build-and-publish.yml  docker-build-push.yml
charts/external-secrets-reloader/: Chart.yaml  README.md
charts/external-secrets-reloader/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
charts/external-secrets-reloader/tests/: clusterrolebinding_test.yaml  deployment_test.yaml  serviceaccount_test.yaml
external_secrets_reloader/: main.py
external_secrets_reloader/clouds/aws/: parameter_store_key_parser.py
external_secrets_reloader/entries/: eventbridgeentry.py  sqsentry.py
external_secrets_reloader/event_handler/: aws_parameter_store_event_handler.py
external_secrets_reloader/processors/: eventbridge_processor.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  deployment.yaml
helm/templates/tests/: test-connection.yaml
helm/tests/: clusterrole_test.yaml
src/external-secrets-reloader/event_handler/: aws_parameter_store_event_handler.py
src/external_secrets_reloader/: __main__.py  health_check.py  main.py  settings.py
src/external_secrets_reloader/entries/: eventbridgeentry.py  sqsentry.py
src/external_secrets_reloader/event_handler/: aws_event_handler.py  aws_parameter_store_event_handler.py  eso_event_handler.py
src/external_secrets_reloader/health_check/: health_status_thread.py
src/external_secrets_reloader/parsers/: eso_key_parser.py  key_parser.py
src/external_secrets_reloader/processors/: eventbridge_processor.py  processor.py  sqs_processor.py
tests/: test_eso_aws_provider_reloader.py  test_eso_event_handler.py  test_eventbridge_processor.py  test_eventbridgeentry.py  test_settings.py  test_sqs_processor.py  test_sqsentry.py
(+3 files in other folders)
