[project]
name = "external-secrets-reloader"
version = "0.0.1"
description = "Event-driven ESO ExternalSecrets Reloader"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.41.1",
    "kubernetes>=34.1.0",
    "flask>=2.3.0",
]

[project.scripts]
external-secrets-reloader = "external_secrets_reloader.__main__:main"

[tool.uv.build-backend]
module-name = "external_secrets_reloader"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
